Add product management features with exception handling and logging
- Implemented CRUD operations for products in ProductController and ProductService.
- Introduced exception handling with ApiExceptionHandler for resource not found and product already exists scenarios.
- Enhanced ProductDto and Product model with Lombok annotations for cleaner code.
- Updated dependencies in pom.xml and added Spring Boot Actuator for monitoring.
- Configured application properties for product file path.